--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Cpk/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Cpk/Index.cshtml
@@ -108,7 +108,7 @@
         <div>
             项目: <input id="ProjectName" class="easyui-textbox"   style="width: 80px">
             功率:
-            <select id="combogridPcl" class="easyui-combogrid" name="dept" style="width: 250px;" onchange="javascript: alert('11');"
+            <select id="combogridPcl" class="easyui-combogrid" name="dept" style="width: 250px;" 
                     data-options="
             panelWidth:450,
             idField:'Tch',
