--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/PurchaseAndDelivery/InAndOut.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/PurchaseAndDelivery/InAndOut.cshtml
@@ -5,14 +5,14 @@
     ViewBag.OutWareHouse = "OutWareHouse";
 }
 
-<div>退货</div>
+<div>退板</div>
 
 <p>
     @Html.Label("机型")<input id="dd" type="text" class="easyui-textbox" required="required">
     @Html.Label("SN")<input id="de" type="text" class="easyui-textbox" required="required">
 </p>
 
-<div>出货</div>
+<div>收板</div>
 <p>
     @Html.Label("SN")<input id="dt" type="text" class="easyui-textbox" required="required">
 </p>
