修正HR导数据的问题

--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/SwipeCard/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/SwipeCard/Index.cshtml
@@ -34,9 +34,8 @@
         var exportExcel = function () {
             var toolbarfilterRules = GetFilterRules();
             if (toolbarfilterRules) {
-                var group = new $.Mes.filter.group();
-                group.Rules = toolbarfilterRules;
-                window.open("@ViewBag.CreateExcel?where=" + JSON.stringify(group));
+                var group = getFilterGroup(toolbarfilterRules);
+                window.open("@ViewBag.CreateExcel?where=" + group);
             }
 
         };
